[gd_scene load_steps=31 format=3 uid="uid://ddk2vh04b5n1c"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_uhene"]
[ext_resource type="FontFile" uid="uid://cd2d0made820k" path="res://Resources/Fonts/Default.ttf" id="1_wsnms"]
[ext_resource type="PackedScene" uid="uid://cvxgmcglpifqo" path="res://Scenes/background.tscn" id="2_hqxhv"]
[ext_resource type="PackedScene" uid="uid://c24638ekp5g3y" path="res://Scenes/main_menu.tscn" id="3_1edqh"]
[ext_resource type="Texture2D" uid="uid://co4dc1fhpwqs7" path="res://Resources/Images/snowflake.png" id="4_68vjy"]
[ext_resource type="PackedScene" uid="uid://cq0tw86if3h4t" path="res://Scenes/pause_menu.tscn" id="4_byso1"]
[ext_resource type="PackedScene" uid="uid://dsojbxfvy4pk8" path="res://Scenes/level_selection.tscn" id="5_c8c64"]
[ext_resource type="PackedScene" uid="uid://bqtytgj7d7p1u" path="res://Scenes/credits.tscn" id="7_2quxs"]
[ext_resource type="PackedScene" uid="uid://csb5x38occ8p2" path="res://Scenes/finish_menu.tscn" id="8_1b1gn"]
[ext_resource type="PackedScene" uid="uid://c5kxstyjgvo6b" path="res://Scenes/collect_screen.tscn" id="9_7yup1"]
[ext_resource type="PackedScene" uid="uid://d2nvm0a1eb11t" path="res://Scenes/game_over_menu.tscn" id="10_ajnyx"]
[ext_resource type="PackedScene" uid="uid://beygl7farnit4" path="res://Scenes/settings_menu.tscn" id="10_on1yh"]
[ext_resource type="PackedScene" uid="uid://cvksbkhweo1kg" path="res://Scenes/weapon_selection.tscn" id="10_x0ftc"]
[ext_resource type="AudioStream" uid="uid://cv2mosluvx1ys" path="res://Resources/Sounds/title_melody.wav" id="13_g6dpr"]
[ext_resource type="Script" path="res://Scripts/music.gd" id="14_mvmjm"]
[ext_resource type="AudioStream" uid="uid://fhlg73ytwd2l" path="res://Resources/Sounds/snow_level.wav" id="16_msmy0"]

[sub_resource type="Curve" id="Curve_jrul4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.446667, 1), 0.0749247, 0.0749247, 0, 0, Vector2(0.566667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_paeip"]
curve = SubResource("Curve_jrul4")

[sub_resource type="Curve" id="Curve_ja8q7"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.386667, 1), 0.0, 0.0, 0, 0, Vector2(0.626667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5a4tx"]
curve = SubResource("Curve_ja8q7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tukuk"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1000, 400, 1)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 40.0
angular_velocity_min = -30.0
angular_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_5a4tx")
alpha_curve = SubResource("CurveTexture_paeip")

[sub_resource type="Gradient" id="Gradient_qrxdr"]
colors = PackedColorArray(0, 0, 0, 0.627451, 0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_liwie"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_g1hsj"]
resource_name = "change_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.466667, 0.533333, 0.966667, 1),
"transitions": PackedFloat32Array(1, -2, 1, -2, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v32wc"]
resource_name = "show_text"
length = 0.85
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.8),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nsq04"]
_data = {
"RESET": SubResource("Animation_liwie"),
"change_text": SubResource("Animation_g1hsj"),
"show_text": SubResource("Animation_v32wc")
}

[sub_resource type="Animation" id="Animation_r86ns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinishMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinishMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollectScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollectScreen:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gkr7e"]
resource_name = "fade_collect_screen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollectScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollectScreen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6pjcf"]
resource_name = "fade_finish_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinishMenu:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinishMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4v27"]
_data = {
"RESET": SubResource("Animation_r86ns"),
"fade_collect_screen": SubResource("Animation_gkr7e"),
"fade_finish_menu": SubResource("Animation_6pjcf")
}

[node name="Main" type="Node"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_uhene")

[node name="Background" parent="UI" instance=ExtResource("2_hqxhv")]

[node name="SildeCam" type="Camera2D" parent="UI/Background"]
position = Vector2(0, -208)

[node name="Title" type="Label" parent="UI"]
z_index = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 4608.0
offset_bottom = 875.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_wsnms")
theme_override_font_sizes/font_size = 300
text = "Mad Santa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Particles" type="GPUParticles2D" parent="UI/Title"]
process_mode = 3
show_behind_parent = true
position = Vector2(2880, 600)
amount = 16
process_material = SubResource("ParticleProcessMaterial_tukuk")
texture = ExtResource("4_68vjy")
lifetime = 5.0
preprocess = 5.0

[node name="Text" type="ColorRect" parent="UI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -174.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
color = Color(0, 0, 0, 0.627451)

[node name="Line2D" type="Line2D" parent="UI/Text"]
points = PackedVector2Array(576, 0, 576, -50)
width = 1152.0
gradient = SubResource("Gradient_qrxdr")

[node name="Label" type="Label" parent="UI/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -18
theme_override_fonts/font = ExtResource("1_wsnms")
theme_override_font_sizes/font_size = 25
text = "Du bist ein Schneemann und deine Freundin wurde brutal von
Schrergen des wild gewordenen Weihnachtsmannes get√∂tet."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="UI/Text"]
libraries = {
"": SubResource("AnimationLibrary_nsq04")
}

[node name="MainMenu" parent="UI" instance=ExtResource("3_1edqh")]

[node name="PauseMenu" parent="UI" instance=ExtResource("4_byso1")]
visible = false

[node name="LevelSelection" parent="UI" instance=ExtResource("5_c8c64")]
visible = false

[node name="Credits" parent="UI" instance=ExtResource("7_2quxs")]
visible = false

[node name="FinishMenu" parent="UI" instance=ExtResource("8_1b1gn")]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="CollectScreen" parent="UI" instance=ExtResource("9_7yup1")]
visible = false
modulate = Color(1, 1, 1, 0)

[node name="gameOverMenu" parent="UI" instance=ExtResource("10_ajnyx")]
visible = false

[node name="SettingsMenu" parent="UI" instance=ExtResource("10_on1yh")]
visible = false

[node name="Animations" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_d4v27")
}

[node name="WeaponSelection" parent="UI" instance=ExtResource("10_x0ftc")]
position = Vector2(1056, 584)

[node name="Music" type="Node" parent="."]
script = ExtResource("14_mvmjm")

[node name="TitleMelody" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("13_g6dpr")
bus = &"Music"

[node name="LevelMelody" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("16_msmy0")
bus = &"Music"
